# prime-watch-native

./: .gitmodules  CMakeLists.txt
lib/: CMakeLists.txt
src/: GameMemory.cpp  main.cpp
